fixed semantic spacing

--- a/css/style.css
+++ b/css/style.css
@@ -168,13 +168,6 @@ nav#pagefournav ul li a {
   margin-right: auto;
   margin-left: auto;
 }
-/*
-#romaniamap {
-  width: 350px;
-  float: right;
-  margin-right: 10px;
-}
-*/
 .para1-pg3 { /* WWI (Romania Page) */
   display: block;
   background-color: #D6E9F5;
